--- a/about/index.html
+++ b/about/index.html
@@ -182,8 +182,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://youchangblog.cn/archive" title="时间轴1">
-                    <span>时间轴1</span>
+                <a href="https://youchangblog.cn/archive" title="时间轴">
+                    <span>时间轴</span>
                 </a>
             </li>
             <li>
