--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://youchangblog.cn/search" title="搜索 (Alt &#43; /)" accesskey=/>
-                    <span>搜索</span>
+                <a href="https://youchangblog.cn/" title="主页">
+                    <span class="active">主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://youchangblog.cn/" title="主页">
-                    <span class="active">主页</span>
+                <a href="https://youchangblog.cn/search" title="搜索 (Alt &#43; /)" accesskey=/>
+                    <span>搜索</span>
                 </a>
             </li>
             <li>
@@ -148,18 +148,23 @@
                 </a>
             </li>
             <li>
-                <a href="https://youchangblog.cn/archive" title="时间轴">
-                    <span>时间轴</span>
-                </a>
-            </li>
-            <li>
                 <a href="https://youchangblog.cn/tags" title="标签">
                     <span>标签</span>
                 </a>
             </li>
             <li>
+                <a href="https://youchangblog.cn/archive" title="时间轴">
+                    <span>时间轴</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://youchangblog.cn/about" title="关于">
                     <span>关于</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://youchangblog.cn/categories/" title="分类">
+                    <span>分类</span>
                 </a>
             </li>
         </ul>
@@ -183,19 +188,9 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="posts/c&#43;&#43;" rel="noopener" title="c&#43;&#43;">
-                <span class="button-inner">
-                    c&#43;&#43;
-                </span>
-            </a>
             <a class="button" href="posts/paper" rel="noopener" title="论文">
                 <span class="button-inner">
                     论文
-                </span>
-            </a>
-            <a class="button" href="posts/java" rel="noopener" title="java">
-                <span class="button-inner">
-                    java
                 </span>
             </a>
         </div>
