--- a/series/index.html
+++ b/series/index.html
@@ -113,13 +113,13 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://youchangblog.cn/search" title="搜索 (Alt &#43; /)" accesskey=/>
-                    <span>搜索</span>
+                <a href="https://youchangblog.cn/" title="主页">
+                    <span>主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://youchangblog.cn/" title="主页">
-                    <span>主页</span>
+                <a href="https://youchangblog.cn/search" title="搜索 (Alt &#43; /)" accesskey=/>
+                    <span>搜索</span>
                 </a>
             </li>
             <li>
@@ -133,18 +133,23 @@
                 </a>
             </li>
             <li>
-                <a href="https://youchangblog.cn/archive" title="时间轴">
-                    <span>时间轴</span>
-                </a>
-            </li>
-            <li>
                 <a href="https://youchangblog.cn/tags" title="标签">
                     <span>标签</span>
                 </a>
             </li>
             <li>
+                <a href="https://youchangblog.cn/archive" title="时间轴">
+                    <span>时间轴</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://youchangblog.cn/about" title="关于">
                     <span>关于</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://youchangblog.cn/categories/" title="分类">
+                    <span>分类</span>
                 </a>
             </li>
         </ul>
