--- a/search/index.html
+++ b/search/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Search - 小章鱼&#39;s Blog">
 <meta name="author" content="小章鱼">
 <link rel="canonical" href="https://youchangblog.cn/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.b609c58d5c11bb90b1a54e04005d74ad1ddf22165eb79f5533967e57df9c3b50.css" integrity="sha256-tgnFjVwRu5CxpU4EAF10rR3fIhZet59VM5Z&#43;V9&#43;cO1A=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.7e5f3538d740dafe8ac64a2f6a297fa83e7946197c9cf2300d580bf3294e535d.css" integrity="sha256-fl81ONdA2v6Kxkovail/qD55Rhl8nPIwDVgL8ylOU10=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.68c68affbff50988dbe10c1ca39238ed6bfb5588238fd97333c3ed57271342b9.js" integrity="sha256-aMaK/7/1CYjb4Qwco5I47Wv7VYgjj9lzM8PtVycTQrk="></script>
 <link rel="icon" href="https://youchangblog.cn/img/Q.gif">
 <link rel="icon" type="image/png" sizes="16x16" href="https://youchangblog.cn/img/Q.gif">
@@ -195,11 +195,6 @@
             <li>
                 <a href="https://youchangblog.cn/about" title="关于">
                     <span>关于</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://youchangblog.cn/categories/" title="分类">
-                    <span>分类</span>
                 </a>
             </li>
         </ul>
