--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | 小章鱼&#39;s Blog</title>
+<title>404 Page not found | Squidward&#39;s Blog</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
-<meta name="author" content="小章鱼">
+<meta name="author" content="Squidward">
 <link rel="canonical" href="https://youchangblog.cn/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.7e5f3538d740dafe8ac64a2f6a297fa83e7946197c9cf2300d580bf3294e535d.css" integrity="sha256-fl81ONdA2v6Kxkovail/qD55Rhl8nPIwDVgL8ylOU10=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://youchangblog.cn/img/Q.gif">
