--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>小章鱼&#39;s Blog</title>
+<title>Squidward&#39;s Blog</title>
 
 <meta name="description" content="">
-<meta name="author" content="小章鱼">
+<meta name="author" content="Squidward">
 <link rel="canonical" href="https://youchangblog.cn/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.7e5f3538d740dafe8ac64a2f6a297fa83e7946197c9cf2300d580bf3294e535d.css" integrity="sha256-fl81ONdA2v6Kxkovail/qD55Rhl8nPIwDVgL8ylOU10=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://youchangblog.cn/img/Q.gif">
@@ -61,20 +61,20 @@
 </noscript>
   
 
-<meta property="og:title" content="小章鱼&#39;s Blog" />
+<meta property="og:title" content="Squidward&#39;s Blog" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://youchangblog.cn/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="小章鱼&#39;s Blog"/>
+<meta name="twitter:title" content="Squidward&#39;s Blog"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "小章鱼's Blog",
+  "name": "Squidward's Blog",
   "url": "https://youchangblog.cn/",
   "description": "",
   "thumbnailUrl": "https://youchangblog.cn/img/Q.gif",
